--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react-native": "^0.71.3"
+    "@types/react-native": "^0.71.3",
+    "typescript": "~4.3.5"
   },
   "private": true
 }
