--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~44.0.0",
-    "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "expo": "~47.0.12",
+    "expo-status-bar": "~1.4.2",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-web": "~0.18.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react-native": "^0.71.3",
-    "typescript": "~4.3.5"
+    "@types/react": "^18.0.14",
+    "@types/react-native": "^0.70.6",
+    "typescript": "^4.6.3"
   },
   "private": true
 }
